<resources>
    <string name="app_name">Bruno</string>
    <string name="title_route_planning">Route Planning</string>
    <string name="title_fitness_records">Fitness Records</string>
    <string name="title_settings">Settings</string>
    <string name="ok_button">OK</string>
    <string name="yes_button">YES</string>
    <string name="no_button">NO</string>
    <string name="get_started_button">Get Started</string>
    <string name="next_button">Next</string>
    <string name="allow_access_button">Allow Access</string>
    <string name="select_button">Select</string>
    <string name="install_button">Install</string>
    <string name="quit_button">Quit</string>
    <string name="loading_diaglog_text">Loading… Please wait</string>
    <string name="onboarding_welcome">Welcome to Bruno!</string>
    <string name="onboarding_welcome_text">Bruno is a fitness app that augments your walk or run routines with randomly generated routes and music discovery.</string>
    <string name="onboarding_record">Learn More About Yourself</string>
    <string name="onboarding_record_text">Bruno automatically archives your past routines, so you can monitor your progress.</string>
    <string name="onboarding_pick_your_avatar">Pick Your Avatar</string>
    <string name="onboarding_request_location_permission_title">Location Permission</string>
    <string name="onboarding_request_location_permission_hint">Generate routes and track route progress</string>
    <string name="onboarding_request_location_service_title">Location Service</string>
    <string name="onboarding_request_location_service_hint">Generate routes and track route progress</string>
    <string name="onboarding_request_active_internet_title">Active Internet</string>
    <string name="onboarding_request_active_internet_hint">Load map data, generate routes, and stream music</string>
    <string name="onboarding_request_spotify_title">Spotify</string>
    <string name="onboarding_request_spotify_hint">Requires Spotify to be installed</string>
    <string name="onboarding_missing_spotify_installation_title">Spotify Not Installed</string>
    <string name="onboarding_missing_spotify_installation_description">Spotify app not found on the device, please install it from the Play Store.</string>
    <string name="onboarding_missing_internet_text">Bruno requires an active internet connection to proceed. Please wait until your device is connected to an active network before proceeding.</string>
    <string name="onboarding_fallback_playlist_title">Pick a Fallback Playlist</string>
    <string name="onboarding_fallback_playlist_hint">Select a Spotify playlist to use during your route if you lose connection to the Internet. Make sure that this playlist is downloaded on your device.</string>
    <string name="onboarding_fallback_playlist_no_playlist_description">You currently have no Spotify playlists. Add a playlist to your Spotify account and configure your fallback playlist in settings.</string>
    <string name="onboarding_fallback_playlist_fail">Something went wrong, please try again later.</string>
    <string name="onboarding_fallback_playlist_not_premium_user">Unfortunately, Bruno requires Spotify Premium to work.</string>
    <string name="onboarding_all_done">All Done!</string>
    <string name="onboarding_permission_title">Bruno Requirements</string>
    <string name="permission_status_name">Permission name</string>
    <string name="permission_status_description">Explain why permission is needed.</string>
    <string name="settings_user_preferences_title">Your Preferences</string>
    <string name="settings_avatar_title">Avatar</string>
    <string name="settings_avatar_hint">Pick a new avatar</string>
    <string name="settings_fallback_playlist_title">Fallback Playlist</string>
    <string name="settings_fallback_playlist_hint">Spotify playlist used when you lose Internet connection</string>
    <string name="settings_debug_preferences_title">Debug Preferences</string>
    <string name="settings_mock_route_generator_title">Route Generator</string>
    <string name="settings_mock_playlist_generator_title">Playlist Generator</string>
    <string name="settings_mock_music_player_title">Music Player</string>
    <string name="settings_mock_location_service_title">Location Service</string>
    <string name="settings_mock_fitness_record_dao_title">Fitness Record DAO</string>
    <string name="settings_mock_spotify_auth_service_title">Spotify Auth Service</string>
    <string name="settings_mock_spotify_playlist_api_title">Spotify Playlist API</string>
    <string name="save_button">Save</string>
    <string name="about_bruno_title">About Bruno</string>
    <string name="version">Version</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_hint">All the stuff you agree with Bruno.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_hint">How Bruno treats your data.</string>
    <string name="credits">Credits</string>
    <string name="credits_hint">Thanks to everybody that made Bruno possible!</string>
    <string name="route_planning_instruction">Plan your route with Bruno</string>
    <string name="route_planning_walking_mode">Walking</string>
    <string name="route_planning_running_mode">Running</string>
    <string name="route_planning_start">Start</string>
    <string name="route_planning_create_route">Create Route</string>
    <string name="route_planning_duration">Duration (Minutes)</string>
    <string name="route_planning_playlist_error">Error generating playlist, please try again!</string>
    <string name="route_planning_greeting">Good day,</string>
    <string name="run_player_connect_title">Hold on tight</string>
    <string name="run_player_connect_message">Bruno is connecting to the music player</string>
    <string name="run_completion_title">Route Completed</string>
    <string name="run_completion_message">Hooray! You have completed your exercise. You can find details in the Fitness Records tab.</string>
    <string name="player_error">Player Error</string>
    <string name="run_exit_title">Are you exhausted?</string>
    <string name="run_exit_message">Bruno doesn\'t like it when you quit in the middle. He will stop playing your music.</string>
    <string name="route_navigation_stop">EXIT</string>
    <string name="fitness_details_leaderboard">Leaderboard</string>
    <string name="fitness_details_stats">Your Stats</string>
    <string name="fitness_details_playlist">Route Playlist</string>
    <string name="fitness_details_you">You</string>
    <string name="fitness_details_bruno">Bruno</string>
    <string name="fitness_details_crown_description">Running award</string>
    <string name="fitness_details_distance_description">Total distance indicator</string>
    <string name="fitness_details_steps_description">Total steps indicator</string>
    <string name="fitness_details_clock_description">Total time elapsed indicator</string>
    <string name="fitness_details_music_description">Music note</string>
    <string name="view_holder_fallback_playlist_name">Bruno playlist name</string>
    <string name="view_holder_fallback_playlist_tracks">108 tracks</string>
    <string name="view_holder_fitness_record_title">June 15 · 11:30 AM</string>
    <string name="view_holder_fitness_record_distance">1.5 km</string>
    <string name="view_holder_fitness_record_duration">1 hour</string>
    <string name="fallback_fail_title">Something went wrong</string>
    <string name="fallback_fail_description">Bruno is unable to continue the run. You have either not yet set a
        fallback playlist or Bruno encountered a problem. Your current progress will be lost.</string>
    <string name="credits_text">
        "Core developers:
    - Boris Chan
    - George Lim
    - Jackie Xu
    - James Huang
    - Mohit Patel
    - Sherry Li

Bruno Icon:
    Evelyn Gondosiswanto

Action Icons:
    Font Awesome

Avatar Arts:
    Icon made by Freepik from www.flaticon.com"
    </string>
</resources>