<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@drawable/list_item_pressed"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/record_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:src="@drawable/ic_walking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorSecondary" />

    <TextView
        android:id="@+id/record_datetime"
        style="@style/TextTitle"
        android:layout_marginStart="8dp"
        android:text="@string/view_holder_fitness_record_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/record_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" />

    <TextView
        android:id="@+id/record_distance"
        style="@style/NormalText"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/view_holder_fitness_record_distance"
        app:layout_constraintBottom_toTopOf="@id/record_duration"
        app:layout_constraintRight_toRightOf="@id/barrier"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/record_duration"
        style="@style/NormalText"
        android:layout_marginEnd="8dp"
        android:text="@string/view_holder_fitness_record_duration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/record_distance" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        app:constraint_referenced_ids="record_arrow" />

    <ImageView
        android:id="@+id/record_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorDisable" />

</androidx.constraintlayout.widget.ConstraintLayout>