<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shared.FallbackPlaylistFragment">

    <LinearLayout
        android:id="@+id/layout_spotify_select_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextTitle"
            android:layout_gravity="center"
            android:text="@string/onboarding_fallback_playlist_title" />

        <TextView
            style="@style/ParagraphText"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:text="@string/onboarding_fallback_playlist_hint"
            android:textAlignment="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_fallback_playlist"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:scrollbars="vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_spotify_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_spotify_logo" />

        <TextView
            android:id="@+id/tv_spotify_error_description"
            style="@style/ParagraphText"
            android:layout_gravity="center"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_spotify_no_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextTitle"
            android:layout_gravity="center"
            android:text="@string/onboarding_fallback_playlist_title" />

        <TextView
            style="@style/ParagraphText"
            android:layout_gravity="center"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:text="@string/onboarding_fallback_playlist_hint"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_spotify_logo" />

        <TextView
            style="@style/ParagraphText"
            android:layout_gravity="center"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:text="@string/onboarding_fallback_playlist_no_playlist_description"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>